--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-share-it",
-    "version": "1.0.13",
+    "version": "1.0.14",
     "description": "A Vue.js component for sharing links to social networks",
     "main": "index.js",
     "scripts": {
@@ -37,6 +37,17 @@
         "vue-template-compiler": "^2.6.10",
         "css-loader": "^3.2.0",
         "style-loader": "1.0.0",
-        "compression-webpack-plugin": "3.0.0"
-    }
+        "compression-webpack-plugin": "3.0.0",
+        "babel-polyfill": "6.26.0",
+        "babel-loader": "8.0.6",
+        "@babel/core": "7.7.2",
+        "@babel/preset-env": "7.7.1"
+    },
+    "browserslist": [
+        "last 1 version",
+        "> 1%",
+        "maintained node versions",
+        "not dead",
+        "IE 11"
+    ]
 }
