--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-share-it",
-    "version": "1.0.14",
+    "version": "1.1.0",
     "description": "A Vue.js component for sharing links to social networks",
     "main": "index.js",
     "scripts": {
@@ -41,7 +41,8 @@
         "babel-polyfill": "6.26.0",
         "babel-loader": "8.0.6",
         "@babel/core": "7.7.2",
-        "@babel/preset-env": "7.7.1"
+        "@babel/preset-env": "7.7.1",
+        "serialize-javascript": ">=2.1.1"
     },
     "browserslist": [
         "last 1 version",
